[FIX] 회원가입 entity 변경 및 회원 닉네임 valid check
