# src/main/resources/static/openapi/auth.json
@@ -416,6 +416,48 @@
         }
       }
     },
+    "/members/check-nickname": {
+      "get": {
+        "tags": ["Member"],
+        "summary": "닉네임 중복 확인",
+        "description": "요청된 닉네임이 이미 존재하는지 확인합니다. 중복일 경우 true, 중복이 없으면 false를 반환합니다.",
+        "parameters": [
+          {
+            "name": "nickname",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "홍길동"
+            },
+            "description": "중복 확인할 닉네임"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "닉네임 중복 여부 반환",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "SUCCESS"
+                    },
+                    "data": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "true면 중복, false면 사용 가능"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/login": {
       "post": {
         "tags": ["Member"],
@@ -612,9 +654,7 @@
           "name": { "type": "string" },
           "email": { "type": "string", "format": "email" },
           "gender": { "type": "string", "enum": ["MALE", "FEMALE", "OTHER"] },
-          "nickname": { "type": "string" },
-          "department": { "type": "string" },
-          "studentNumber": { "type": "integer" }
+          "nickname": { "type": "string" }
         }
       },
       "MemberCreateRequest": {
@@ -624,9 +664,7 @@
           "email": { "type": "string", "format": "email" },
           "password": { "type": "string" },
           "gender": { "type": "string", "enum": ["MALE","FEMALE","OTHER"] },
-          "nickname": { "type": "string" },
-          "department": { "type": "string" },
-          "studentNumber": { "type": "integer" }
+          "nickname": { "type": "string" }
         },
         "required": ["name", "email", "password"]
       },
@@ -657,9 +695,7 @@
         "properties": {
           "name": { "type": "string" },
           "nickname": { "type": "string" },
-          "department": { "type": "string" },
-          "gender": { "type": "string", "enum": ["MALE","FEMALE","OTHER"] },
-          "studentNumber": { "type": "integer" }
+          "gender": { "type": "string", "enum": ["MALE","FEMALE","OTHER"] }
         }
       },
       "ReissueResponse": {
